tests/liquid/neg/abs-join.js
/*@ abs :: (number) => number */ 
function abs(x){
  var res = true; //0;
  if (false) {
    res = x;
  }
  //else {
  //  res = (x > 99);
  //};
  //assert(res >= 0);
  return res;
}
